--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
+        marketing &amp; growth solutions.
       </p>
     </footer>
   </body>
