--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,  initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайту -->
@@ -13,8 +14,8 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
