--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,68 @@
         </ul>
       </address>
     </header>
-    <main></main>
+    <main>
+      <h1>Portfolio page</h1>
+      <!-- Transition buttons -->
+      <section>
+        <h2>Transition buttons</h2>
+        <ul>
+          <li><button type="button">All</button></li>
+          <li><button type="button">Web Site</button></li>
+          <li><button type="button">App</button></li>
+          <li><button type="button">Design</button></li>
+          <li><button type="button">Marketing</button></li>
+        </ul>
+      </section>
+      <!-- list of works -->
+      <section>
+        <h2>list of works</h2>
+        <ul>
+          <li>
+            <img src="./images/portfolio_1.jpg" alt="Banking application" />
+          </li>
+          <li>
+            <img src="./images/portfolio_2.jpg" alt="QR code in mobile" />
+          </li>
+          <li>
+            <img src="./images/portfolio_3.jpg" alt="mobile and laptop" />
+          </li>
+          <li>
+            <img
+              src="./images/portfolio_4.jpg"
+              alt="hands on the steering wheel of the car"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/portfolio_5.jpg"
+              alt="mobile with different working windows"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/portfolio_6.jpg"
+              alt="the girl looks at the mobile phone"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/portfolio_7.jpg"
+              alt="a collage of screenshots from the application"
+            />
+          </li>
+          <li>
+            <img src="./images/portfolio_8.jpg" alt="grocery bag in hand" />
+          </li>
+          <li>
+            <img
+              src="./images/portfolio_9.jpg"
+              alt="pouring milk into coffee"
+            />
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
