--- a/portfolio.html
+++ b/portfolio.html
@@ -47,45 +47,63 @@
         <ul>
           <li>
             <img src="./images/portfolio_1.jpg" alt="Banking application" />
+            <h3>Banking App Interface Concept</h3>
+            <p>App</p>
           </li>
           <li>
             <img src="./images/portfolio_2.jpg" alt="QR code in mobile" />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img src="./images/portfolio_3.jpg" alt="mobile and laptop" />
+            <h3>Meditaion App</h3>
+            <p>App</p>
           </li>
           <li>
             <img
               src="./images/portfolio_4.jpg"
               alt="hands on the steering wheel of the car"
             />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img
               src="./images/portfolio_5.jpg"
               alt="mobile with different working windows"
             />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
           </li>
           <li>
             <img
               src="./images/portfolio_6.jpg"
               alt="the girl looks at the mobile phone"
             />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img
               src="./images/portfolio_7.jpg"
               alt="a collage of screenshots from the application"
             />
+            <h3>Instagram Stories Concept</h3>
+            <p>Design</p>
           </li>
           <li>
             <img src="./images/portfolio_8.jpg" alt="grocery bag in hand" />
           </li>
           <li>
+            <h3>Organic Food</h3>
+            <p>Web Site</p>
             <img
               src="./images/portfolio_9.jpg"
               alt="pouring milk into coffee"
             />
+            <h3>Fresh Coffee</h3>
+            <p>Web Site</p>
           </li>
         </ul>
       </section>
