--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <!-- Шапка сайту -->
-    <header>
+    <header class="page-header">
       <!-- Меню -->
-      <nav>
-        <a href="./index.html">WebStudio</a>
+      <nav class="site-nav">
+        <a href="./index.html"><span class="logo-blue">Web</span>Studio</a>
         <ul>
           <li><a href="./index.html">Studio</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
