--- a/portfolio.html
+++ b/portfolio.html
@@ -46,17 +46,32 @@
         <h2>list of works</h2>
         <ul>
           <li>
-            <img src="./images/portfolio_1.jpg" alt="Banking application" />
+            <img
+              src="./images/portfolio_1.jpg"
+              alt="Banking application"
+              widch="360"
+              height="300"
+            />
             <h3>Banking App Interface Concept</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="./images/portfolio_2.jpg" alt="QR code in mobile" />
+            <img
+              src="./images/portfolio_2.jpg"
+              alt="QR code in mobile"
+              widch="360"
+              height="300"
+            />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/portfolio_3.jpg" alt="mobile and laptop" />
+            <img
+              src="./images/portfolio_3.jpg"
+              alt="mobile and laptop"
+              widch="360"
+              height="300"
+            />
             <h3>Meditaion App</h3>
             <p>App</p>
           </li>
@@ -64,6 +79,8 @@
             <img
               src="./images/portfolio_4.jpg"
               alt="hands on the steering wheel of the car"
+              widch="360"
+              height="300"
             />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
@@ -72,6 +89,8 @@
             <img
               src="./images/portfolio_5.jpg"
               alt="mobile with different working windows"
+              widch="360"
+              height="300"
             />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
@@ -80,6 +99,8 @@
             <img
               src="./images/portfolio_6.jpg"
               alt="the girl looks at the mobile phone"
+              widch="360"
+              height="300"
             />
             <h3>Online Courses</h3>
             <p>Marketing</p>
@@ -88,12 +109,19 @@
             <img
               src="./images/portfolio_7.jpg"
               alt="a collage of screenshots from the application"
+              widch="360"
+              height="300"
             />
             <h3>Instagram Stories Concept</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="./images/portfolio_8.jpg" alt="grocery bag in hand" />
+            <img
+              src="./images/portfolio_8.jpg"
+              alt="grocery bag in hand"
+              widch="360"
+              height="300"
+            />
           </li>
           <li>
             <h3>Organic Food</h3>
@@ -101,6 +129,8 @@
             <img
               src="./images/portfolio_9.jpg"
               alt="pouring milk into coffee"
+              widch="360"
+              height="300"
             />
             <h3>Fresh Coffee</h3>
             <p>Web Site</p>
