--- a/index.html
+++ b/index.html
@@ -5,22 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,  initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайту -->
-    <header class="page-header">
+    <header class="header-pg">
       <!-- Меню -->
-      <nav class="site-nav">
-        <a href="./index.html"><span class="logo-blue">Web</span>Studio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+      <nav class="header-nav">
+        <a href="./index.html" class="header-logo"
+          ><span class="logo">Web</span>Studio</a
+        >
+        <ul class="header-list">
+          <li class="header-item"><a href="./index.html">Studio</a></li>
+          <li class="header-item"><a href="./portfolio.html">Portfolio</a></li>
+          <li class="header-item"><a href="">Contacts</a></li>
         </ul>
       </nav>
       <!-- пошта та телефон -->
-      <address>
+      <address class="header-address">
         <ul>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
