--- a/index.html
+++ b/index.html
@@ -29,51 +29,52 @@
       </nav>
       <!-- пошта та телефон -->
       <address class="header-address">
-        <ul>
-          <li>
+        <ul class="header-address-list">
+          <li class="header-addres-item">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="header-addres-item">
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
-
     <main>
       <!-- Перший блок герой -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="site-hero">
+        <h1 class="hero-hd">Effective Solutions for Your Business</h1>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
       <!-- section 2 -->
-      <section>
-        <h2>why are we the best</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="best">
+        <h2 class="best-hd">why are we the best</h2>
+        <ul class="best-list">
+          <li class="best-item">
+            <h3 class="best-list-hd">Strategy</h3>
+            <p class="best-item-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="best-item">
+            <h3 class="best-list-hd">Punctuality</h3>
+            <p class="best-item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="best-item">
+            <h3 class="best-list-hd">Diligence</h3>
+            <p class="best-item-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="best-item">
+            <h3 class="best-list-hd">Technologies</h3>
+            <p class="best-item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -81,10 +82,10 @@
         </ul>
       </section>
       <!-- Section 3 What are we doing-->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <section class="job">
+        <h2 class="job-hd">What are we doing</h2>
+        <ul class="job-list">
+          <li class="job-item">
             <img
               src="./images/img_1.jpg"
               alt="monitor with graphs"
@@ -92,7 +93,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="job-item">
             <img
               src="./images/img_2.jpg"
               alt="smartphone with multiple screens"
@@ -100,7 +101,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="job-item">
             <img
               src="./images/img_3.jpg"
               alt="smartphone with laptop"
@@ -111,59 +112,61 @@
         </ul>
       </section>
       <!-- section-4 Our Team-->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="team">
+        <h2 class="team-hd">Our Team</h2>
+        <ul class="team-list">
           <!-- cart Mark Guerrero -->
-          <li>
+          <li class="team-item">
             <img
               src="./images/cartimg_1.jpg"
               alt="Photo Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-item-hd">Mark Guerrero</h3>
+            <p class="team-item-text">Product Designer</p>
           </li>
           <!-- cart Tom Ford -->
-          <li>
+          <li class="team-item">
             <img
               src="./images/cartimg_2.jpg"
               alt="Photo Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-item-hd">Tom Ford</h3>
+            <p class="team-item-text">Frontend Developer</p>
           </li>
           <!-- cart Camila Garcia -->
-          <li>
+          <li class="team-item">
             <img
               src="./images/cartimg_3.jpg"
               alt="Photo Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-item-hd">Camila Garcia</h3>
+            <p class="team-item-text">Marketing</p>
           </li>
           <!-- cart Daniel Wilson -->
-          <li>
+          <li class="team-item">
             <img
               src="./images/cartimg_4.jpg"
               alt="Photo Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-item-hd">Daniel Wilson</h3>
+            <p class="team-item-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="last">
+      <a href="./index.html" class="last-logo-link">
+        <span class="logo"> Web</span>Studio</a
+      >
+      <p class="last-text">
         Increase the flow of customers and sales for your business with digital
         marketing &amp; growth solutions.
       </p>
