--- a/portfolio.html
+++ b/portfolio.html
@@ -15,139 +15,148 @@
   </head>
   <body>
     <!-- Шапка сайту -->
-    <header>
+    <header class="header-pg">
       <!-- Меню -->
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+      <nav class="header-nav">
+        <a href="./index.html" class="header-logo"
+          ><span class="logo">Web</span>Studio</a
+        >
+        <ul class="header-list">
+          <li class="header-item"><a href="./index.html">Studio</a></li>
+          <li class="header-item"><a href="./portfolio.html">Portfolio</a></li>
+          <li class="header-item"><a href="">Contacts</a></li>
         </ul>
       </nav>
       <!-- пошта та телефон -->
-      <address>
-        <ul>
-          <li>
+      <address class="header-address">
+        <ul class="header-address-list">
+          <li class="header-addres-item">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="header-addres-item">
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
+
     <main>
-      <h1>Portfolio page</h1>
-      <!-- Transition buttons -->
-      <section>
-        <h2>Transition buttons</h2>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+      <h1 class="portfolio-hd">Portfolio page</h1>
+      <section class="section-portfolio">
+        <!-- Transition buttons -->
+        <h2 class="filter-hd">Transition buttons</h2>
+        <ul class="filter-list">
+          <li class="filter-item"><button type="button">All</button></li>
+          <li class="filter-item"><button type="button">Web Site</button></li>
+          <li class="filter-item"><button type="button">App</button></li>
+          <li class="filter-item"><button type="button">Design</button></li>
+          <li class="filter-item"><button type="button">Marketing</button></li>
         </ul>
-      </section>
-      <!-- list of works -->
-      <section>
-        <h2>list of works</h2>
-        <ul>
-          <li>
+
+        <!-- list of works -->
+
+        <h2 class="work-hd">list of works</h2>
+        <ul class="work-list">
+          <li class="work-item">
             <img
               src="./images/portfolio_1.jpg"
               alt="Banking application"
-              widch="360"
+              width="360"
               height="300"
             />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+
+            <h3 class="work-item-hd">Banking App Interface Concept</h3>
+            <p class="work-item-text">App</p>
           </li>
-          <li>
+          <li class="work-item">
             <img
               src="./images/portfolio_2.jpg"
               alt="QR code in mobile"
-              widch="360"
+              width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+
+            <h3 class="work-item-hd">Cashless Payment</h3>
+            <p class="work-item-text">Marketing</p>
           </li>
-          <li>
+          <li class="work-item">
             <img
               src="./images/portfolio_3.jpg"
               alt="mobile and laptop"
-              widch="360"
+              width="360"
               height="300"
             />
-            <h3>Meditaion App</h3>
-            <p>App</p>
+            <h3 class="work-item-hd">Meditaion App</h3>
+            <p class="work-item-text">App</p>
           </li>
-          <li>
+          <li class="work-item">
             <img
               src="./images/portfolio_4.jpg"
               alt="hands on the steering wheel of the car"
-              widch="360"
+              width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="work-item-hd">Taxi Service</h3>
+            <p class="work-item-text">Marketing</p>
           </li>
-          <li>
+          <li class="work-item">
             <img
               src="./images/portfolio_5.jpg"
               alt="mobile with different working windows"
-              widch="360"
+              width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="work-item-hd">Screen Illustrations</h3>
+            <p class="work-item-text">Design</p>
           </li>
-          <li>
+          <li class="work-item">
             <img
               src="./images/portfolio_6.jpg"
               alt="the girl looks at the mobile phone"
-              widch="360"
+              width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="work-item-hd">Online Courses</h3>
+            <p class="work-item-text">Marketing</p>
           </li>
-          <li>
+          <li class="work-item">
             <img
               src="./images/portfolio_7.jpg"
               alt="a collage of screenshots from the application"
-              widch="360"
+              width="360"
               height="300"
             />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+            <h3 class="work-item-hd">Instagram Stories Concept</h3>
+            <p class="work-item-text">Design</p>
           </li>
-          <li>
+          <li class="work-item">
             <img
               src="./images/portfolio_8.jpg"
               alt="grocery bag in hand"
-              widch="360"
+              width="360"
               height="300"
             />
+            <h3 class="work-item-hd">Organic Food</h3>
+            <p class="work-item-text">Web Site</p>
           </li>
-          <li>
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+          <li class="work-item">
             <img
               src="./images/portfolio_9.jpg"
               alt="pouring milk into coffee"
-              widch="360"
+              width="360"
               height="300"
             />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+            <h3 class="work-item-hd">Fresh Coffee</h3>
+            <p class="work-item-text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="last">
+      <a href="./index.html" class="last-logo-link">
+        <span class="logo"> Web</span>Studio</a
+      >
+      <p class="last-text">
         Increase the flow of customers and sales for your business with digital
         marketing &amp; growth solutions.
       </p>
