--- a/index.html
+++ b/index.html
@@ -21,15 +21,21 @@
         <a href="./index.html" class="header-logo"
           ><span class="logo">Web</span>Studio</a
         >
-        <ul class="header-list">
-          <li class="header-item"><a href="./index.html">Studio</a></li>
-          <li class="header-item"><a href="./portfolio.html">Portfolio</a></li>
-          <li class="header-item"><a href="">Contacts</a></li>
+        <ul class="header-list list">
+          <li class="header-item">
+            <a class="header-item-link" href="./index.html">Studio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-item-link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-item-link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <!-- пошта та телефон -->
       <address class="header-address">
-        <ul class="header-address-list">
+        <ul class="header-address-list list">
           <li class="header-addres-item">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
@@ -48,7 +54,7 @@
       <!-- section 2 -->
       <section class="best">
         <h2 class="best-hd">why are we the best</h2>
-        <ul class="best-list">
+        <ul class="best-list list">
           <li class="best-item">
             <h3 class="best-list-hd">Strategy</h3>
             <p class="best-item-text">
@@ -84,7 +90,7 @@
       <!-- Section 3 What are we doing-->
       <section class="job">
         <h2 class="job-hd">What are we doing</h2>
-        <ul class="job-list">
+        <ul class="job-list list">
           <li class="job-item">
             <img
               src="./images/img_1.jpg"
@@ -114,7 +120,7 @@
       <!-- section-4 Our Team-->
       <section class="team">
         <h2 class="team-hd">Our Team</h2>
-        <ul class="team-list">
+        <ul class="team-list list">
           <!-- cart Mark Guerrero -->
           <li class="team-item">
             <img
