--- a/portfolio.html
+++ b/portfolio.html
@@ -21,15 +21,21 @@
         <a href="./index.html" class="header-logo"
           ><span class="logo">Web</span>Studio</a
         >
-        <ul class="header-list">
-          <li class="header-item"><a href="./index.html">Studio</a></li>
-          <li class="header-item"><a href="./portfolio.html">Portfolio</a></li>
-          <li class="header-item"><a href="">Contacts</a></li>
+        <ul class="header-list list">
+          <li class="header-item">
+            <a class="header-item-link" href="./index.html">Studio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-item-link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-item-link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <!-- пошта та телефон -->
       <address class="header-address">
-        <ul class="header-address-list">
+        <ul class="header-address-list list">
           <li class="header-addres-item">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
@@ -39,13 +45,12 @@
         </ul>
       </address>
     </header>
-
     <main>
       <h1 class="portfolio-hd">Portfolio page</h1>
       <section class="section-portfolio">
         <!-- Transition buttons -->
         <h2 class="filter-hd">Transition buttons</h2>
-        <ul class="filter-list">
+        <ul class="filter-list list list">
           <li class="filter-item"><button type="button">All</button></li>
           <li class="filter-item"><button type="button">Web Site</button></li>
           <li class="filter-item"><button type="button">App</button></li>
@@ -56,7 +61,7 @@
         <!-- list of works -->
 
         <h2 class="work-hd">list of works</h2>
-        <ul class="work-list">
+        <ul class="work-list list">
           <li class="work-item">
             <img
               src="./images/portfolio_1.jpg"
