--- a/index.html
+++ b/index.html
@@ -15,32 +15,36 @@
   </head>
   <body>
     <!-- Шапка сайту -->
-    <header class="header-pg">
+    <header class="header-page">
       <!-- Меню -->
       <nav class="header-nav">
-        <a href="./index.html" class="header-logo"
+        <a class="link-logo link" href="./index.html"
           ><span class="logo">Web</span>Studio</a
         >
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-item-link" href="./index.html">Studio</a>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link link" href="./index.html">Studio</a>
           </li>
-          <li class="header-item">
-            <a class="header-item-link" href="./portfolio.html">Portfolio</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="header-item">
-            <a class="header-item-link" href="">Contacts</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <!-- пошта та телефон -->
-      <address class="header-address">
-        <ul class="header-address-list list">
-          <li class="header-addres-item">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address class="contact">
+        <ul class="contact-list list">
+          <li class="contact-item">
+            <a class="mail-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="header-addres-item">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="contact-list list">
+            <a class="tel-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
