--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     </header>
     <main>
       <!-- Перший блок герой -->
-      <section class="site-hero">
-        <h1 class="hero-hd">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-caption">Effective Solutions for Your Business</h1>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
       <!-- section 2 -->
       <section class="best">
