--- a/portfolio.html
+++ b/portfolio.html
@@ -15,11 +15,11 @@
   </head>
   <body>
     <!-- Шапка сайту -->
-   
-    <nav class="header-nav">
+    <header>
+      <nav class="header-nav">
         <a class="link-logo link" href="./index.html"
-          ><span class="logo">Web</span>Studio</a
-        >
+          ><span class="logo">Web</span>Studio
+        </a>
         <ul class="menu list">
           <li class="menu-item">
             <a class="menu-link link" href="./index.html">Studio</a>
@@ -62,7 +62,6 @@
         </ul>
 
         <!-- list of works -->
-
         <h2 class="work-hd">list of works</h2>
         <ul class="work-list list">
           <li class="work-item">
