--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </section>
       <!-- section 2 -->
       <section class="best">
-        <h2 class="best-hd">why are we the best</h2>
+        <h2 class="best-hd visually-hidden">why are we the best</h2>
         <ul class="best-list list">
           <li class="best-item">
             <h3 class="best-list-hd">Strategy</h3>
@@ -81,7 +81,6 @@
               growth opportunities and minimize risk.
             </p>
           </li>
-
           <li class="best-item">
             <h3 class="best-list-hd">Technologies</h3>
             <p class="best-item-text">
