--- a/portfolio.html
+++ b/portfolio.html
@@ -49,10 +49,10 @@
       </address>
     </header>
     <main>
-      <h1 class="portfolio-hd">Portfolio page</h1>
+      <h1 class="portfolio-hd visually-hidden">Portfolio page</h1>
       <section class="section-portfolio">
         <!-- Transition buttons -->
-        <h2 class="filter-hd">Transition buttons</h2>
+        <h2 class="filter-hd visually-hidden">Transition buttons</h2>
         <ul class="filter-list list list">
           <li class="filter-item"><button type="button">All</button></li>
           <li class="filter-item"><button type="button">Web Site</button></li>
@@ -62,7 +62,7 @@
         </ul>
 
         <!-- list of works -->
-        <h2 class="work-hd">list of works</h2>
+        <h2 class="work-hd visually-hidden">list of works</h2>
         <ul class="work-list list">
           <li class="work-item">
             <img
