--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -92,7 +92,7 @@
       </section>
       <!-- Section 3 What are we doing-->
       <section class="job">
-        <h2 class="job-hd">What are we doing</h2>
+        <h2 class="job-heading">What are we doing</h2>
         <ul class="job-list list">
           <li class="job-item">
             <img
@@ -122,7 +122,7 @@
       </section>
       <!-- section-4 Our Team-->
       <section class="team">
-        <h2 class="team-hd">Our Team</h2>
+        <h2 class="team-heading">Our Team</h2>
         <ul class="team-list list">
           <!-- cart Mark Guerrero -->
           <li class="team-item">
@@ -132,7 +132,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-item-hd">Mark Guerrero</h3>
+            <h3 class="team-item-heading">Mark Guerrero</h3>
             <p class="team-item-text">Product Designer</p>
           </li>
           <!-- cart Tom Ford -->
@@ -143,7 +143,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-item-hd">Tom Ford</h3>
+            <h3 class="team-item-heading">Tom Ford</h3>
             <p class="team-item-text">Frontend Developer</p>
           </li>
           <!-- cart Camila Garcia -->
@@ -154,7 +154,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-item-hd">Camila Garcia</h3>
+            <h3 class="team-item-heading">Camila Garcia</h3>
             <p class="team-item-text">Marketing</p>
           </li>
           <!-- cart Daniel Wilson -->
@@ -165,14 +165,14 @@
               width="264"
               height="260"
             />
-            <h3 class="team-item-hd">Daniel Wilson</h3>
+            <h3 class="team-item-heading">Daniel Wilson</h3>
             <p class="team-item-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="last">
-      <a href="./index.html" class="last-logo-link">
+      <a href="./index.html" class="link-logo link">
         <span class="logo"> Web</span>Studio</a
       >
       <p class="last-text">
