--- a/portfolio.html
+++ b/portfolio.html
@@ -8,18 +8,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайту -->
-    <header>
+    <header class="header-page">
+      <!-- Меню -->
       <nav class="header-nav">
         <a class="link-logo link" href="./index.html"
-          ><span class="logo">Web</span>Studio
-        </a>
+          ><span class="logo">Web</span>Studio</a
+        >
         <ul class="menu list">
           <li class="menu-item">
             <a class="menu-link link" href="./index.html">Studio</a>
@@ -49,20 +50,30 @@
       </address>
     </header>
     <main>
-      <h1 class="portfolio-hd visually-hidden">Portfolio page</h1>
+      <h1 class="portfolio-heading visually-hidden">Portfolio page</h1>
       <section class="section-portfolio">
         <!-- Transition buttons -->
-        <h2 class="filter-hd visually-hidden">Transition buttons</h2>
+        <h2 class="filter-header visually-hidden">Transition buttons</h2>
         <ul class="filter-list list list">
-          <li class="filter-item"><button type="button">All</button></li>
-          <li class="filter-item"><button type="button">Web Site</button></li>
-          <li class="filter-item"><button type="button">App</button></li>
-          <li class="filter-item"><button type="button">Design</button></li>
-          <li class="filter-item"><button type="button">Marketing</button></li>
+          <li class="filter-item">
+            <button class="radio-filter" type="button">All</button>
+          </li>
+          <li class="filter-item">
+            <button class="radio-filter" type="button">Web Site</button>
+          </li>
+          <li class="filter-item">
+            <button class="radio-filter" type="button">App</button>
+          </li>
+          <li class="filter-item">
+            <button class="radio-filter" type="button">Design</button>
+          </li>
+          <li class="filter-item">
+            <button class="radio-filter" type="button">Marketing</button>
+          </li>
         </ul>
 
         <!-- list of works -->
-        <h2 class="work-hd visually-hidden">list of works</h2>
+        <h2 class="work-header visually-hidden">list of works</h2>
         <ul class="work-list list">
           <li class="work-item">
             <img
@@ -72,7 +83,7 @@
               height="300"
             />
 
-            <h3 class="work-item-hd">Banking App Interface Concept</h3>
+            <h3 class="work-item-header">Banking App Interface Concept</h3>
             <p class="work-item-text">App</p>
           </li>
           <li class="work-item">
@@ -83,7 +94,7 @@
               height="300"
             />
 
-            <h3 class="work-item-hd">Cashless Payment</h3>
+            <h3 class="work-item-header">Cashless Payment</h3>
             <p class="work-item-text">Marketing</p>
           </li>
           <li class="work-item">
@@ -93,7 +104,7 @@
               width="360"
               height="300"
             />
-            <h3 class="work-item-hd">Meditaion App</h3>
+            <h3 class="work-item-header">Meditaion App</h3>
             <p class="work-item-text">App</p>
           </li>
           <li class="work-item">
@@ -103,7 +114,7 @@
               width="360"
               height="300"
             />
-            <h3 class="work-item-hd">Taxi Service</h3>
+            <h3 class="work-item-header">Taxi Service</h3>
             <p class="work-item-text">Marketing</p>
           </li>
           <li class="work-item">
@@ -113,7 +124,7 @@
               width="360"
               height="300"
             />
-            <h3 class="work-item-hd">Screen Illustrations</h3>
+            <h3 class="work-item-header">Screen Illustrations</h3>
             <p class="work-item-text">Design</p>
           </li>
           <li class="work-item">
@@ -123,7 +134,7 @@
               width="360"
               height="300"
             />
-            <h3 class="work-item-hd">Online Courses</h3>
+            <h3 class="work-item-header">Online Courses</h3>
             <p class="work-item-text">Marketing</p>
           </li>
           <li class="work-item">
@@ -133,7 +144,7 @@
               width="360"
               height="300"
             />
-            <h3 class="work-item-hd">Instagram Stories Concept</h3>
+            <h3 class="work-item-header">Instagram Stories Concept</h3>
             <p class="work-item-text">Design</p>
           </li>
           <li class="work-item">
@@ -143,7 +154,7 @@
               width="360"
               height="300"
             />
-            <h3 class="work-item-hd">Organic Food</h3>
+            <h3 class="work-item-header">Organic Food</h3>
             <p class="work-item-text">Web Site</p>
           </li>
           <li class="work-item">
@@ -153,14 +164,14 @@
               width="360"
               height="300"
             />
-            <h3 class="work-item-hd">Fresh Coffee</h3>
+            <h3 class="work-item-header">Fresh Coffee</h3>
             <p class="work-item-text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="last">
-      <a href="./index.html" class="last-logo-link">
+      <a href="./index.html" class="link-logo link">
         <span class="logo"> Web</span>Studio</a
       >
       <p class="last-text">
