--- a/portfolio.html
+++ b/portfolio.html
@@ -50,10 +50,9 @@
       </address>
     </header>
     <main>
-      <h1 class="portfolio-heading visually-hidden">Portfolio page</h1>
       <section class="section-portfolio">
+        <h1 class="portfolio-heading visually-hidden">Portfolio page</h1>
         <!-- Transition buttons -->
-        <h2 class="filter-header visually-hidden">Transition buttons</h2>
         <ul class="filter-list list list">
           <li class="filter-item">
             <button class="radio-filter" type="button">All</button>
@@ -73,99 +72,115 @@
         </ul>
 
         <!-- list of works -->
-        <h2 class="work-header visually-hidden">list of works</h2>
+
         <ul class="work-list list">
           <li class="work-item">
-            <img
-              src="./images/portfolio_1.jpg"
-              alt="Banking application"
-              width="360"
-              height="300"
-            />
-
-            <h3 class="work-item-header">Banking App Interface Concept</h3>
-            <p class="work-item-text">App</p>
+            <a href="" class="link-work-list link">
+              <img
+                src="./images/portfolio_1.jpg"
+                alt="Banking application"
+                width="360"
+                height="300"
+              />
+              <h2 class="work-item-header">Banking App Interface Concept</h2>
+              <p class="work-item-text">App</p></a
+            >
           </li>
           <li class="work-item">
-            <img
-              src="./images/portfolio_2.jpg"
-              alt="QR code in mobile"
-              width="360"
-              height="300"
-            />
-
-            <h3 class="work-item-header">Cashless Payment</h3>
-            <p class="work-item-text">Marketing</p>
+            <a href="" class="link-work-list link">
+              <img
+                src="./images/portfolio_2.jpg"
+                alt="QR code in mobile"
+                width="360"
+                height="300"
+              />
+              <h2 class="work-item-header">Cashless Payment</h2>
+              <p class="work-item-text">Marketing</p></a
+            >
           </li>
           <li class="work-item">
-            <img
-              src="./images/portfolio_3.jpg"
-              alt="mobile and laptop"
-              width="360"
-              height="300"
-            />
-            <h3 class="work-item-header">Meditaion App</h3>
-            <p class="work-item-text">App</p>
+            <a href="" class="link-work-list link">
+              ><img
+                src="./images/portfolio_3.jpg"
+                alt="mobile and laptop"
+                width="360"
+                height="300"
+              />
+              <h2 class="work-item-header">Meditaion App</h2>
+              <p class="work-item-text">App</p></a
+            >
           </li>
           <li class="work-item">
-            <img
-              src="./images/portfolio_4.jpg"
-              alt="hands on the steering wheel of the car"
-              width="360"
-              height="300"
-            />
-            <h3 class="work-item-header">Taxi Service</h3>
-            <p class="work-item-text">Marketing</p>
+            <a href="" class="link-work-list link">
+              <img
+                src="./images/portfolio_4.jpg"
+                alt="hands on the steering wheel of the car"
+                width="360"
+                height="300"
+              />
+              <h2 class="work-item-header">Taxi Service</h2>
+              <p class="work-item-text">Marketing</p></a
+            >
           </li>
           <li class="work-item">
-            <img
-              src="./images/portfolio_5.jpg"
-              alt="mobile with different working windows"
-              width="360"
-              height="300"
-            />
-            <h3 class="work-item-header">Screen Illustrations</h3>
-            <p class="work-item-text">Design</p>
+            <a href="" class="link-work-list link">
+              <img
+                src="./images/portfolio_5.jpg"
+                alt="mobile with different working windows"
+                width="360"
+                height="300"
+              />
+              <h2 class="work-item-header">Screen Illustrations</h2>
+              <p class="work-item-text">Design</p></a
+            >
           </li>
           <li class="work-item">
-            <img
-              src="./images/portfolio_6.jpg"
-              alt="the girl looks at the mobile phone"
-              width="360"
-              height="300"
-            />
-            <h3 class="work-item-header">Online Courses</h3>
-            <p class="work-item-text">Marketing</p>
+            <a href="" class="link-work-list link">
+              <img
+                src="./images/portfolio_6.jpg"
+                alt="the girl looks at the mobile phone"
+                width="360"
+                height="300"
+              />
+              <h2 class="work-item-header">Online Courses</h2>
+              <p class="work-item-text">Marketing</p></a
+            >
           </li>
           <li class="work-item">
-            <img
-              src="./images/portfolio_7.jpg"
-              alt="a collage of screenshots from the application"
-              width="360"
-              height="300"
-            />
-            <h3 class="work-item-header">Instagram Stories Concept</h3>
-            <p class="work-item-text">Design</p>
+            <a href="" class="link-work-list link">
+              <img
+                src="./images/portfolio_7.jpg"
+                alt="a collage of screenshots from the application"
+                width="360"
+                height="300"
+              />
+              <h2 class="work-item-header">Instagram Stories Concept</h2>
+              <p class="work-item-text">Design</p></a
+            >
           </li>
           <li class="work-item">
-            <img
-              src="./images/portfolio_8.jpg"
-              alt="grocery bag in hand"
-              width="360"
-              height="300"
-            />
-            <h3 class="work-item-header">Organic Food</h3>
-            <p class="work-item-text">Web Site</p>
+            <a href="" class="link-work-list link">
+              <img
+                src="./images/portfolio_8.jpg"
+                alt="grocery bag in hand"
+                width="360"
+                height="300"
+              />
+              <h2 class="work-item-header">Organic Food</h2>
+              <p class="work-item-text">Web Site</p></a
+            >
           </li>
           <li class="work-item">
-            <img
-              src="./images/portfolio_9.jpg"
-              alt="pouring milk into coffee"
-              width="360"
-              height="300"
-            />
-            <h3 class="work-item-header">Fresh Coffee</h3>
-            <p class="work-item-text">Web Site</p>
+            <a href="" class="link-work-list link">
+              <img
+                src="./images/portfolio_9.jpg"
+                alt="pouring milk into coffee"
+                width="360"
+                height="300"
+              />
+              <h2 class="work-item-header">Fresh Coffee</h2>
+              <p class="work-item-text">Web Site</p></a
+            >
           </li>
         </ul>
       </section>
